[gd_scene load_steps=6 format=3 uid="uid://cy4uk0blx6meh"]

[ext_resource type="Texture2D" uid="uid://07ksx2ec3ifl" path="res://Assets/Default (64px)/Characters/green_character.png" id="1_1iqv8"]
[ext_resource type="Script" path="res://Player/Player.gd" id="1_ud5d4"]
[ext_resource type="PackedScene" uid="uid://bw8vhuc3rvjlj" path="res://Weapons/AOE/BaseAOEWeapon.tscn" id="3_qenh1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ym01c"]
radius = 12.0
height = 32.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ogp6i"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_ud5d4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_1iqv8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ym01c")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="EnemyCollider" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyCollider"]
shape = SubResource("CapsuleShape2D_ogp6i")

[node name="DamageTimer" type="Timer" parent="."]
autostart = true

[node name="Weapons" type="Node2D" parent="."]

[node name="BaseAOEWeapon" parent="Weapons" instance=ExtResource("3_qenh1")]
cooldown = 1.0

[connection signal="area_entered" from="EnemyCollider" to="." method="_on_enemy_collider_area_entered"]
[connection signal="area_exited" from="EnemyCollider" to="." method="_on_enemy_collider_area_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
